fixed button on mobile docs

--- a/site/static/styles/mobile.css
+++ b/site/static/styles/mobile.css
@@ -84,7 +84,7 @@
     padding: 25px 0;
   }
 
-  .side-nav {
+  .side-nav-container {
     display: none;
   }
 
